adding graph experiment

--- a/index.html
+++ b/index.html
@@ -194,9 +194,28 @@
             </ul>            
           </div>
         </li>
+
+      <li class="portfolio-block row">
+          <div class="portfolio-image-block col-md-6 col-xs-12">
+            <div class="galleria">
+              <a href="http://www.youtube.com/watch?v=Uh6n3SAbQx4">
+                <img src="http://img.youtube.com/vi/Uh6n3SAbQx4/0.jpg">
+              </a>
+            </div>
+          </div>
+          <div class="portfolio-text col-md-5 col-xs-12">
+            <h2 class="title">CSS3 Graph Experiment</h2>
+            <p>A Graph made with only CSS3 Elements (no SVG, no images).</p>
+            <p>Technologies :</p>
+            <ul>
+              <li>CSS3 / HTML5 / Javascript</li>
+              <li>Knockout.js</li>
+              <li>Django (Python)</li>
+            </ul>            
+          </div>
+        </li>        
            
 	  	</ul>
-
       <footer class="portfolio-footer">
 
       </footer>
