--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <h1 class="col-md-offset-3 col-md-4">Portfolio</h1>
         <div class="col-md-3 col-xs-12 contact-block">
           <ul>
-            <li class="row"><span class="col-xs-4 col-md-5"><i class="fa fa-github"></i>&nbsp;Github</span><a class="col-xs-8 col-md-7" href="http://wwww.google.fr">pelos</a></li>
-            <li class="row"><span class="col-xs-4 col-md-5"><i class="fa fa-linkedin"></i>&nbsp;Linked-in</span><a class="col-xs-8 col-md-7" href="http://wwww.google.fr">pelos</a></li>
+            <li class="row"><span class="col-xs-4 col-md-5"><i class="fa fa-github"></i>&nbsp;Github</span><a class="col-xs-8 col-md-7" href="https://github.com/alex-min">github.com/alex-min</a></li>
+            <li class="row"><span class="col-xs-4 col-md-5"><i class="fa fa-linkedin"></i>&nbsp;Linked-in</span><a class="col-xs-8 col-md-7" href="http://fr.linkedin.com/in/minettealexandre/">linkedin.com/in/minettealexandre/</a></li>
             <li class="row"><span class="col-xs-4 col-md-5"><i class="fa fa-envelope"></i>&nbsp;Email</span><a class="col-xs-8 col-md-7" href="mailto:minette.alexandre@gmail.com">minette.alexandre@gmail.com</a></li>
           </ul>
         </div>
