--- a/index.html
+++ b/index.html
@@ -215,6 +215,23 @@
           </div>
         </li>        
            
+   <li class="portfolio-block row">
+          <div class="portfolio-image-block col-md-6 col-xs-12">
+            <div class="galleria">
+              <img class="porfolio-image" alt="" src="/img/sf2/boilerplate.png">
+            </div>
+          </div>
+          <div class="portfolio-text col-md-5 col-xs-12">
+            <h2 class="title">Symfony2 Boilerplate</h2>
+            <p>Technologies :</p>
+            <ul>
+              <li>CSS3 / HTML5 / Javascript</li>
+              <li>Symfony2 (PHP5)</li>
+            </ul>            
+          </div>
+        </li>
+           
+
 	  	</ul>
       <footer class="portfolio-footer">
 
