--- a/index.html
+++ b/index.html
@@ -151,6 +151,31 @@
         </li>
 
 
+
+        <li class="portfolio-block row">
+          <div class="portfolio-image-block col-md-6 col-xs-12">
+            <div class="galleria">
+              <img class="porfolio-image" src="/img/geogames/current.png">
+              <img class="porfolio-image" src="/img/geogames/monitor.png">
+              <img class="porfolio-image" src="/img/geogames/profile.png">
+            </div>            
+          </div>
+          <div class="portfolio-text col-md-5 col-xs-12">
+            <h2 class="title">
+             <a href="http://geogames.fr">Geogames.fr</a>
+            </h2>
+            <p>
+              <a href="http://geogames.fr">Geogames.fr</a> is a project similar to Ingress created by Google. The main goal is to create a new type of geolocalized games inspired my modern video games.
+            </p>
+            <p>Technologies :</p>
+            <ul>
+              <li>Javascript (Jquery, Angular.js) / CSS3 (Bootstrap 3) / HTML5</li>
+              <li>Python (Django)</li>
+            </ul>
+          </div>
+        </li>    
+
+
 	  		<li class="portfolio-block row">
 	  			<div class="portfolio-image-block col-md-6 col-xs-12">
             <div class="galleria">
