--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
 	  	<header class="portfolio-header row">
-        <img src="/img/profile-picture.jpg" class="col-md-1 col-xs-2">
+        <img src="/img/profile-picture.png" class="col-md-1 col-xs-2">
         <h1 class="col-md-offset-3 col-md-4">Portfolio</h1>
         <div class="col-md-3 col-xs-12 contact-block">
           <ul>
