--- a/index.html
+++ b/index.html
@@ -124,7 +124,63 @@
       </header>
 	  	<ul class="list-group portfolio-list">
 
+        <li class="portfolio-block row">
+          <div class="portfolio-image-block col-md-6 col-xs-12">
+            <div class="galleria">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-clients.png">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-dashboard.png">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-appform.png">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-payplan.png">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-search.png">
+              <img class="porfolio-image" src="/img/bboxxcrm/crm-signup.png">
+            </div>            
+          </div>
+          <div class="portfolio-text col-md-5 col-xs-12">
+            <h2 class="title">
+             <a href="http://bboxx.co.uk">BBOXX</a> CRM Application<br>
+             <small>(Internal Application, no links available)</small>
+            </h2>
+            <p>
+              The BBOXX CRM is the largest project I've worked at BBOXX (around a full year of work). The application is an hybrid (desktop and web) application working with node-webkit.<br>
+              This application is currently used in 20 shops in Kenya and Rwanda and has been developed with unique challenges in terms of connectivity.<br>
+              A lot of work has been done on the UI to make sure that the data entry is matching the expectations of the company.<br>
+              This application replaced an internal Excel based CRM and a lot of work was done on backward-compatibility and maintenance.
+              <small>(Some content is blurred on the screenshots for privacy reasons.)</small>
+            </p>
+            <p>Technologies :</p>
+            <ul>
+              <li>Angular.js, Node-webkit, HTML5 Offline Cache</li>
+              <li>PouchDb</li>
+              <li>Bootstrap 3, Font-Awesome, HTML5, CSS3.</li>
+            </ul>
+          </div>
+        </li>
 
+        <li class="portfolio-block row">
+          <div class="portfolio-image-block col-md-6 col-xs-12">
+            <div class="galleria">
+              <img class="porfolio-image" src="/img/bboxxsmart/smart-product.png">              
+              <img class="porfolio-image" src="/img/bboxxsmart/smart-dashboard.png">
+              <img class="porfolio-image" src="/img/bboxxsmart/smart-map.png">
+            </div>            
+          </div>
+          <div class="portfolio-text col-md-5 col-xs-12">
+            <h2 class="title">
+             <a href="http://smart.bboxx.co.uk">BBOXX SMART Dashboard</a><br>
+            </h2>
+            <p>
+              The BBOXX SMART Dashboard is a medium-sized project, I've worked on during my time at BBOXX. The main goal of this project was to enable the smart units on the ground to be managed centrally through a web interface.<br>
+              This project was built with Rails on the backend and Angular.js on the front-end.
+              <small>(Some content is blurred on the screenshots for privacy reasons.)</small>
+            </p>
+            <p>Technologies :</p>
+            <ul>
+              <li>Angular.js, TML5 Offline Cache</li>
+              <li>Rails (Ruby), Fat-free CRM</li>
+              <li>Bootstrap 3, Font-Awesome, HTML5, CSS3.</li>
+            </ul>
+          </div>
+        </li>
         <li class="portfolio-block row">
           <div class="portfolio-image-block col-md-6 col-xs-12">
             <div class="galleria">
@@ -138,7 +194,7 @@
              <a href="http://plugmystore.com">Plugmystore.com</a>
             </h2>
             <p>
-              During my work at <a href="http://plugmystore.com">Plugmystore.com</a> I was in charge of the front-end and of the back-end interface.
+              During my internship at <a href="http://plugmystore.com">Plugmystore.com</a> I was in charge of the front-end and of the back-end interface.
             </p>
             <p>Technologies :</p>
             <ul>
@@ -165,7 +221,7 @@
              <a href="http://geogames.fr">Geogames.fr</a>
             </h2>
             <p>
-              <a href="http://geogames.fr">Geogames.fr</a> is a project similar to Ingress created by Google. The main goal is to create a new type of geolocalized games inspired my modern video games.
+              <a href="http://geogames.fr">Geogames.fr</a> was a project similar to Ingress created by Google. The main goal was to create a new type of geolocalized games inspired my modern video games.
             </p>
             <p>Technologies :</p>
             <ul>
