--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <li class="portfolio-block row">
           <div class="portfolio-image-block col-md-6 col-xs-12">
             <div class="galleria">
-              <img class="porfolio-image" alt="KJUS homepage" src="/img/kjus/homepage.png">
-              <img class="porfolio-image" alt="KJUS product page" src="/img/kjus/product-page.png">
-              <img class="porfolio-image" alt="KJUS jacket" src="/img/kjus/product-jacket.png">
-              <img class="porfolio-image" alt="KJUS checkout" src="/img/kjus/checkout.png">
+              <img class="porfolio-image" alt="KJUS homepage" src="/img/kjus/homepage.jpg">
+              <img class="porfolio-image" alt="KJUS product page" src="/img/kjus/product-page.jpg">
+              <img class="porfolio-image" alt="KJUS jacket" src="/img/kjus/product-jacket.jpg">
+              <img class="porfolio-image" alt="KJUS checkout" src="/img/kjus/checkout.jpg">
             </div>            
           </div>
           <div class="portfolio-text col-md-5 col-xs-12">
@@ -48,9 +48,9 @@
         <li class="portfolio-block row">
           <div class="portfolio-image-block col-md-6 col-xs-12">
             <div class="galleria">
-              <img class="porfolio-image" alt="Surfdome homepage" src="/img/surfdome/homepage.png">
-              <img class="porfolio-image" alt="Surfdome detailed product page" src="/img/surfdome/product-bag.png">
-              <img class="porfolio-image" alt="Surfdome product list page" src="/img/surfdome/products-flip-flops.png">
+              <img class="porfolio-image" alt="Surfdome homepage" src="/img/surfdome/homepage.jpg">
+              <img class="porfolio-image" alt="Surfdome detailed product page" src="/img/surfdome/product-bag.jpg">
+              <img class="porfolio-image" alt="Surfdome product list page" src="/img/surfdome/products-flip-flops.jpg">
             </div>            
           </div>
           <div class="portfolio-text col-md-5 col-xs-12">
